hboxes: need to wrap content in one <span> to prevent flexbox from creating several rows
add 2px margin on frames so that framed boxes don't stick together
(dunno where that space comes from in LaTeX)

--- a/src/css/default.css
+++ b/src/css/default.css
@@ -350,7 +350,10 @@ h1, h2, h3, h4 {
 .frame {
     padding: var(--fboxsep);
     border: var(--fboxrule) solid;
+    margin-top: 2px;
+    margin-bottom: 2px;
 }
+
 
 /****************/
 /* environments */
